@@ -5134,7 +5134,11 @@ void menu_ext_desktop_draw_configurable_icon(int index_icon,int pulsado)
 
         else if (MACHINE_IS_SPECTRUM_48_PLUS_SPA) {
             bitmap=bitmap_button_ext_desktop_my_machine_spectrum_48_spa;
-        }         
+        }      
+
+        else if (MACHINE_IS_SPECTRUM_48_PLUS_ENG) {
+            bitmap=bitmap_button_ext_desktop_my_machine_spectrum_48_spa;
+        }            
     }
 
 	if (pulsado || menu_ext_desktop_transparent_configurable_icons.v==0 || menu_pressed_zxdesktop_configurable_icon_which==index_icon) {
